<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools">
    
	<RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/ivProfileImage"
            android:contentDescription="@string/twitter_profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@android:drawable/screen_background_light_transparent" />
        
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvName"
            android:layout_below="@+id/tvName"
            android:text="@string/tagline"
            android:textSize="12sp" />
        
        </RelativeLayout>
        
    <LinearLayout 
        android:id="@+id/llCounts" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/rlHeader"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_followers" />
                
        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/total_following" />
        
    </LinearLayout>

    <fragment
    	android:id="@+id/fragmentUserTimeline"
    	android:name="com.example.twitterclient.fragments.TimelineFragment"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentLeft="true"
    	android:layout_below="@+id/llCounts"
    	android:layout="@layout/fragment_timeline"
    	tools:layout="@layout/fragment_timeline" />
    
</RelativeLayout>
